--- a/generators/app/templates/index.html
+++ b/generators/app/templates/index.html
@@ -97,6 +97,7 @@
       padding: 0;
       /* This is a font-stack that tries to use the system-default sans-serifs first */
       font-family: Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-size: 1.4rem;
       line-height: 1.5;
       min-height: 100vh;
       -webkit-font-smoothing: antialiased;
